sass/components/_gallery.scss
.gallery {
    padding: 5rem 0;
    display: grid;
    overflow: hidden;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: 200px 100px  200px;
    grid-gap: 10px;

    &__img {
        height: 100%;
        object-fit: cover;
        width: 100%;
    }

    &__img:nth-child(1) {
        grid-column: 1 / 3;
    }
    &__img:nth-child(2) {
        grid-column: 3 / 6;
        grid-row: 1 / 3;
    }
    &__img:nth-child(4) {
        grid-column: 7 / 9;
    }
    &__img:nth-child(5) {
        grid-column: 1 / 3;
        grid-row: 2 / 4;
    }
    &__img:nth-child(6) {
        grid-column: 3 / 5;
        
    }
    &__img:nth-child(8) {
        grid-column: span 2;
        grid-row: 2 / 4;
        
    }
    &__img:nth-child(9) {
        grid-row: 2 / 4;
    }
}

@media only screen and (max-width: 1400px) {
    .gallery {
        display: flex; 
        flex-wrap: wrap;
        justify-content: center;
        &__img {
            width: 49%;
            height: 400px;
            flex-grow: 1;
        }
    }
}
@media only screen and (max-width: 670px) {
    .gallery__img {
        width: 100%;
    }
}

